--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       <div class="row justify-content-center">
         <div class="col-md-8 text-center">
           <h2>Acara Pernikahan</h2>
-          <h3>Diselenggarakan pada 20 april 2024 di Tanggalrejo, Mojoagung.</h3>
-          <p>Oleh karena itu, d engan segala hormat, kami bermaksud untuk mengundang Bapak/Ibu, Saudara/i, untuk hadir
+          <h3>Diselenggarakan pada 17 april 2024 di Sumbersari, Saradan.</h3>
+          <p>Oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang Bapak/Ibu, Saudara/i, untuk hadir
             pada acara pernikahan kami. </p>
         </div>
       </div>
@@ -113,14 +113,14 @@
       <div class="row justify-content-center">
         <div class="col-md-8 col-10 text-center">
           <h2>Informasi Acara</h2>
-          <p class="alamat">Alamat: Tanggalrejo RT 02 RW 01 Mojoagung Jombang <br> Gang Depan Gapura Tanggalrejo Masuk</p>
+          <p class="alamat">Alamat: Dsn Kenep RT 16 RW 04 Sumbersari <br> Saradan Madiun</p>
 
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3955.0890797852653!2d112.36192507500282!3d-7.565266692448808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zN8KwMzMnNTUuMCJTIDExMsKwMjEnNTIuMiJF!5e0!3m2!1sid!2sid!4v1712207673978!5m2!1sid!2sid"
+            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3955.5210516227185!2d111.68555027500227!3d-7.518001992494842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zN8KwMzEnMDQuOCJTIDExMcKwNDEnMTcuMyJF!5e0!3m2!1sid!2sid!4v1712235794552!5m2!1sid!2sid"
             width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-          <a href="https://maps.app.goo.gl/AWLwnQtujGVzH7ic6" target="_blank" class="btn btn-light btn-sm my-3">Klik untuk
+          <a href="https://maps.app.goo.gl/if23n16svPqX2L2P6" target="_blank" class="btn btn-light btn-sm my-3">Klik untuk
             membuka peta</a>
           <p class="description">Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di tujuan namun tidak
             ada tanda-tanda sedang dilangsungkan pernikahan, boleh jadi Anda salah jadwal, atau salah tempat.</p>
@@ -135,7 +135,7 @@
               <div class="row justify-content-center">
                 <div class="col-md-6">
                   <i class="bi bi-clock d-block"></i>
-                  <span>08.00 - 10.00</span>
+                  <span>07.00 - 10.00</span>
                 </div>
                 <div class="col-md-6">
                   <i class="bi bi-calendar3 d-block"></i>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-md-6">
                   <i class="bi bi-calendar3 d-block"></i>
-                  <span>Sabtu, 20 April 2024</span>
+                  <span>Sabtu, 17 April 2024</span>
                 </div>
               </div>
             </div>
@@ -258,11 +258,11 @@
             </li>
             <li class="list-group-item">
               <div class="fw-bold">MANDIRI</div>
-              1420018734482 - Harys Dwi Wahyu Rizky
+              1420019283984 - Lusi Mei Wulandari
             </li>
             <li class="list-group-item">
               <div class="fw-bold">Harys Dwi Wahyu Rizky & Lusi Mei Wulandari  </div>
-              <img src="img/bg-prewed.jpg" alt="Saweria QR" class="img-thumbnail" width="150">
+              <img src="img/prewed.jpeg" alt="Saweria QR" class="img-thumbnail" width="150">
             </li>
           </ul>
         </div>
@@ -310,7 +310,7 @@
     simplyCountdown('.simply-countdown', {
       year: 2024, // required
       month: 4, // required
-      day: 20, // required
+      day: 17, // required
       hours: 8, // Default is 0 [0-23] integer
       words: { //words displayed into the countdown
         days: { singular: 'hari', plural: 'hari' },
