--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-md-6">
                   <i class="bi bi-calendar3 d-block"></i>
-                  <span>Sabtu, 17 April 2024</span>
+                  <span>Rabu, 17 April 2024</span>
                 </div>
               </div>
             </div>
